# APIGateWay

backend/: pyproject.toml
backend/apps/core/: urls.py
backend/apps/task_manager/: apps.py
backend/apps/task_manager/proxy/: __init__.py  task_manager.py
backend/apps/task_manager/views/: __init__.py  task_manager.py
backend/settings/: settings.py  urls.py
